expand definitions <lilt#60548>

--- a/wiki/lilt.wikitext
+++ b/wiki/lilt.wikitext
@@ -1,13 +1,15 @@
 ==English==
 ===Verb===
 '''to lilt'''
-
-#To sing cheerfully.
+# To do anything with [[animation]] and quickness, as to skip, fly, or hop. 
+# To sing cheerfully.
+# To utter with spirit, animation, or gayety; to sing with spirit and liveliness.
 
 ===Noun===
 '''lilt'''
 
-# {{substub}}
+# Animated, brisk [[motion]]; spirited [[rhythm]]; [[sprightliness]].
+# A lively song or dance; a cheerful tune.
 
 ===See also===
 *[[brogue]]
@@ -17,3 +19,5 @@
 
 [[it:lilt]]
 [[Category:Scots derivations]]
+
+{{webster}}
