expand verb def <flick#99295>

--- a/wiki/flick.wikitext
+++ b/wiki/flick.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''flick''' (''plural'' '''flicks''')
 
-#A short, quick movement.
+#A short, quick movement, especially a [[brush]], [[sweep]], or [[flip]].
 #:''He removed the speck of dust with a flick of his finger.''
 #:''She gave a disdainful flick of her hair and marched out of the room.''
 #(''in plural:'' '''flicks'''; ''informal, uncountable'') [[Cinema]] (''as a form of entertainment'').
