--- a/wiki/censorware.wikitext
+++ b/wiki/censorware.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-[[censor]] + [[ware]]; coined by media proponents
+[[censor]] + [[ware]] (contraction of [[software]]); coined by media proponents
 
 ===Noun===
 '''censorware'''
