--- a/wiki/ware.wikitext
+++ b/wiki/ware.wikitext
@@ -1,1 +1,31 @@
-#redirect [[ware]]
+==English==
+
+===Noun===
+'''ware'''  (''plural:'' [[wares]])
+# A [[product]] that is [[bought]] or [[sold]]; a [[commodity]].
+#*Note: Often used in combination - [[knitware]], [[software]] etc.
+
+===={{trans}}====
+* {{sv}} : [[vara]] ''c''
+
+====Derived terms====
+*[[warez]] ''("leet" from plural form)''
+
+===Contraction===
+'''ware'''
+
+#[[Software]]
+
+===Suffix===
+'''-ware'''
+
+#Software used to do something.  (''censor'''ware''''')
+#Software of a specific type. (''abandon'''ware''''')
+
+===Transitive verb===
+'''to ware'''
+#(''obsolete'') To [[beware]] of something.
+
+===={{trans}}====
+
+* {{io}} : [[-aj]]
