+audio, expand, wikify <consolidate#79139>

--- a/wiki/consolidate.wikitext
+++ b/wiki/consolidate.wikitext
@@ -2,10 +2,15 @@
 ===Etymology===
 Latin  ''[[consolidare]]'', from ''[[solidus]]'' '[[solid]]'.
 
+===Pronunciation===
+*{{audio|en-us-consolidate.ogg|Audio (US)}}
+
 ===Verb===
 '''to consolidate'''
-# Make stronger or more solid.
-# Combine into a single unit.
+# To [[combine]] into a single unit; to [[group]] together or [[join]].
+#:''He '''consolidated''' his luggage into a single large bag.''
+# Make [[stronger]] or more [[solid]].
+
 
 ====Related terms====
 *[[consolidation]]
