hrm.  test needs some more work, methinks <paying#188165>

--- a/wiki/paying.wikitext
+++ b/wiki/paying.wikitext
@@ -2,6 +2,6 @@
 
 ===Verb===
 '''{{PAGENAME}}'''
-# Present participle of ''to [[{{PAGENAME}}]].''
+# Present participle of ''to [[pay]].''
 
 [[Category: English verbs]]
