--- a/wiki/Sarajevo.wikitext
+++ b/wiki/Sarajevo.wikitext
@@ -3,16 +3,20 @@
 ===Proper noun===
 '''Sarajevo'''
 
-# a [[canton]] of [[Bosnia and Herzegovina]].
-# the [[capital]] [[city]] of Bosnia and Herzegovina.
+# the [[capital]] [[city]] of [[Bosnia and Herzegovina]].
+# a [[canton]] of Bosnia and Herzegovina.
 
 ====Translations====
+*Bosnian: Sarajevo ''n'' (1), [[Sarajevski]] ''m'' (short for Sarajevski [[Kanton|kanton]]) (2)
 *Bulgarian: [[Сараево]] (1, 2)
 *Chinese: [[萨拉热窝]] 
-*French: Sarajevo (2)
+*French: Sarajevo (1)
 *Italian: Sarajevo
 *Japanese: [[サラエボ]], [[サライェヴォ]]
 *Polish: [[Sarajewo]] ''n''
+*Serbian:
+*:Cyrillic: [[Сарајево]] ''n'' (1), [[Сарајевски]] ''m'' (short for Сарајевски [[Кантон|кантон]]) (2)
+*:Latin: Sarajevo ''n'' (1), [[Sarajevski]] ''m'' (short for Sarajevski [[Kanton|kanton]]) (2)
 *Swedish: Sarajevo
 *Turkish: [[Saraybosna]]
 
@@ -21,11 +25,28 @@
 
 ----
 
-==French==
+==Bosnian==
+===Proper noun===
+'''Sarajevo''' ''n''
+# the [[capital]] [[city]] of [[Bosnia and Herzegovina]].
+[[Category:Bosnian city names]]
 
+----
+
+==French==
 ===Proper noun===
 '''Sarajevo'''
 
 #Sarajevo (''city'')
+
+----
+
+==Serbian==
+===Proper noun===
+'''Sarajevo''' ''n''
+# the [[capital]] [[city]] of [[Bosnia and Herzegovina]].
+====See also====
+*[[Сарајево]]
+[[Category:Serbian city names]]
 
 [[hu:Sarajevo]]
