/* See also */ <lump#188166>

--- a/wiki/lump.wikitext
+++ b/wiki/lump.wikitext
@@ -15,4 +15,4 @@
 #:''People tend to '''lump''' turtles and tortoises together, when in fact they are different creatures.''
 
 ===See also===
-*[[take one's lumps]]
+*[[take lumps]]
