--- a/wiki/Sarajevo.wikitext
+++ b/wiki/Sarajevo.wikitext
@@ -7,7 +7,7 @@
 # a [[canton]] of Bosnia and Herzegovina.
 
 ====Translations====
-*Bosnian: Sarajevo ''n'' (1), [[Sarajevski]] ''m'' (short for Sarajevski [[Kanton|kanton]]) (2)
+*Bosnian: Sarajevo ''n'' (1), [[Sarajevski]] ''m'' (short for Sarajevski [[kanton|Kanton]]) (2)
 *Bulgarian: [[Сараево]] (1, 2)
 *Chinese: [[萨拉热窝]] 
 *French: Sarajevo (1)
@@ -15,8 +15,8 @@
 *Japanese: [[サラエボ]], [[サライェヴォ]]
 *Polish: [[Sarajewo]] ''n''
 *Serbian:
-*:Cyrillic: [[Сарајево]] ''n'' (1), [[Сарајевски]] ''m'' (short for Сарајевски [[Кантон|кантон]]) (2)
-*:Latin: Sarajevo ''n'' (1), [[Sarajevski]] ''m'' (short for Sarajevski [[Kanton|kanton]]) (2)
+*:Cyrillic: [[Сарајево]] ''n'' (1), [[Сарајевски]] ''m'' (short for Сарајевски [[кантон|Кантон]]) (2)
+*:Latin: Sarajevo ''n'' (1), [[Sarajevski]] ''m'' (short for Sarajevski [[kanton|Kanton]]) (2)
 *Swedish: Sarajevo
 *Turkish: [[Saraybosna]]
 
