+audio, cat heteronyms <record#55573>

--- a/wiki/record.wikitext
+++ b/wiki/record.wikitext
@@ -1,19 +1,19 @@
 ==English==
-
-<!--TODO: Note variation in emphasis for verb and noun senses-->
+===Pronunciation===
+*{{audio|en-us-record.ogg|Audio (US), noun}}
 
 ===Noun===
 '''record''' (''plural'' [[records]])
 
 #Information put into a lasting physical medium.
-#:''The tourist's photographs and the tape of the police call provide a record of the crime.''
+#:''The tourist's photographs and the tape of the police call provide a '''record''' of the crime.''
 #The most extreme known value of some achievement, particularly in competitive events.
-#:''The heat and humidity were both new records.''
-#:''The team set a new record for most points scored in a quarter.''
+#:''The heat and humidity were both new '''records'''.''
+#:''The team set a new '''record''' for most points scored in a quarter.''
 #A [[vinyl]] [[disc]]/[[disk]] on which music or other sounds are recorded and may be replayed on a [[phonograph]].
-#:''I still like records better than CDs.''
+#:''I still like '''records''' better than CDs.''
 #The music on such a disc/disk.
-#:''She's upstairs listening to Kylie's latest record.''
+#:''She's upstairs listening to Kylie's latest '''record'''.''
 #(''computing'') A set of [[data]] relating to a single individual or item.
 
 ====Synonyms====
@@ -111,15 +111,19 @@
 *Lithuanian: [[įrašas]] ''m''
 |}
 
+===Pronunciation===
+
+*{{audio|en-us-record-verb.ogg|Audio (US), verb}}
+
 ===Transitive verb===
 '''to record''' ([[records]], [[recorded]], [[recording]])
 
 # To make a record of information.
-#: ''I wanted to record every detail of what happened, for the benefit of future generations.''
+#: ''I wanted to '''record''' every detail of what happened, for the benefit of future generations.''
 # Specifically, to make an audio or video recording of.
-#: ''Within a week they had recorded both the song and the video for it.''
+#: ''Within a week they had '''recorded''' both the song and the video for it.''
 # To give legal status to by making an official public record.
-#: ''When the deed was recorded, we officially owned the house.''
+#: ''When the deed was '''recorded''', we officially owned the house.''
 
 '''make a record of'''
 {| border=0  width=100%
@@ -169,7 +173,7 @@
 '''to record''' ([[records]], [[recorded]], [[recording]])
 
 # To make an audio or video recording.
-#: ''Is that thing still recording?  Oops!''
+#: ''Is that thing still '''recording'''?  Oops!''
 
 ====Translations====
 
@@ -187,11 +191,15 @@
 |}
 |}
 
+
+===Pronunciation===
+*{{audio|en-us-record-noun.ogg|Audio (US), adjective}}
+
 ===Adjective=== <!-- Or is it just an attributive noun? -->
 '''record''' (''no [[comparative]] or [[superlative]]''; ''used only before the noun'')
 
 #Establishing a new best achievement or extreme value.
-#:''Despite the record heat and humidity, they ran in record time.''
+#:''Despite the '''record''' heat and humidity, they ran in record time.''
 
 ====Translations====
 
@@ -218,6 +226,7 @@
 *[[world record]]
 
 [[Category:1000 English basic words]]
+[[Category:English heteronyms]]
 
 [[da:Record]]
 [[et:Record]]
