/* Pronunciation */ fix link <record#55573>

--- a/wiki/record.wikitext
+++ b/wiki/record.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Pronunciation===
-*{{audio|en-us-record.ogg|Audio (US), noun}}
+*{{audio|en-us-record-noun.ogg|Audio (US), noun}}
 
 ===Noun===
 '''record''' (''plural'' [[records]])
