--- a/wiki/anoxic.wikitext
+++ b/wiki/anoxic.wikitext
@@ -1,4 +1,6 @@
 ==English==
 ===Noun===
 '''anoxic'''
-# Devoid of oxygen.
+# suffering from a [[reduce]]d [[supply]] of [[oxygen]]
+===Related terms===
+*[[anoxia]]
