+wikipedia link <bumper sticker#188175>

--- a/wiki/bumper_sticker.wikitext
+++ b/wiki/bumper_sticker.wikitext
@@ -1,5 +1,7 @@
 ==English==
+
 ===Noun===
+{{wikipedia}}
 '''[[bumper]] [[sticker]]'''
 #An [[adhesive]] [[label]] or [[decal]], usually applied to the bumper or back end of an automobile, and displaying a short political, promotional, philosophical, or humorous message.
 #:''He has a '''bumper sticker''' on his van that reads "faster than a speeding ticket".''
