--- a/wiki/cicatrix.wikitext
+++ b/wiki/cicatrix.wikitext
@@ -1,3 +1,4 @@
 ==English==
-== Noun ==
-'''Cicatrix''' ''(plural - cicatrices)'' - A scar that remains after the development of new tissue over a recovering wound or sore.
+===Noun===
+'''cicatrix''' (plural - ''cicatrices'')
+# A [[scar]] that remains after the [[development]] of new [[tissue]] over a recovering [[wound]] or [[sore]].
