/* Translations */ <Serbo-Croatian#41625>

--- a/wiki/Serbo-Croatian.wikitext
+++ b/wiki/Serbo-Croatian.wikitext
@@ -27,10 +27,10 @@
 '''Serbo-Croatian'''
 #pertaining to the [[Serbo-Croatian]] language
 ====Translations====
-*Bosnian: [[srpskohrvatski]], [[srpsko-hrvatski]], [[hrvatskosrpski]], [[hrvatsko-srpski]] ''m s/pl''; [[srpskohrvatska]], [[srpsko-hrvatska]], [[hrvatskosrpska]], [[hrvatsko-srpska]] ''f s and n pl''; [[srpskohrvatske]], [[srpsko-hrvatske]], [[hrvatskosrpske]], [[hrvatsko-srpske]] ''f pl''; [[srpskohrvatsko]], [[srpsko-hrvatsko]], [[hrvatskosrpsko]], [[hrvatsko-srpsko]] ''n s''
+*Bosnian: [[srpskohrvatski]], [[srpsko-hrvatski]], [[hrvatskosrpski]], [[hrvatsko-srpski]] ''m''
 *Serbian:
-:*cyrillic: [[српскохрватски]], [[српско-хрватски]] ''m s/pl''; [[српскохрватска]], [[српско-хрватска]] ''f s and n pl''; [[српскохрватске]], [[српско-хрватске]] ''f pl''; [[српскохрватско]], [[српско-хрватско]] ''n s''
-:*latin: [[srpskohrvatski]], [[srpsko-hrvatski]] ''m s/pl''; [[srpskohrvatska]], [[srpsko-hrvatska]] ''f s and n pl''; [[srpskohrvatske]], [[srpsko-hrvatske]] ''f pl''; [[srpskohrvatsko]], [[srpsko-hrvatsko]] ''n s''
+*:Cyrillic: [[српскохрватски]], [[српско-хрватски]] ''m''
+*:Latin: [[srpskohrvatski]], [[srpsko-hrvatski]] ''m''
 
 ===Synonyms===
 *[[Croato-Serbian]]
