--- a/wiki/dolina.wikitext
+++ b/wiki/dolina.wikitext
@@ -1,4 +1,22 @@
+==Bosnian==
+===Noun===
+'''dolina''' ''f s''
+#a [[valley]]
+[[Category:Bosnian common nouns]]
+
+----
+
 ==Croatian==
 ===Noun===
 '''dolina'''
 # [[valley]], especially one in [[limestone]]
+
+----
+
+==Serbian==
+===Noun===
+'''dolina''' ''f s''
+#a [[valley]]
+====See also====
+*[[долина]]
+[[Category:Serbian common nouns]]
