--- a/wiki/beaker.wikitext
+++ b/wiki/beaker.wikitext
@@ -9,4 +9,8 @@
 
 ===Noun===
 '''beaker'''
-# A vessel for drinking from, especially one suitable for small children.
+# A flat-bottomed [[vessel]], with a [[lip]], used as a [[laboratory]] [[container]]
+# A [[drinking]] vessel without a [[handle]], sometimes for the use of [[children]]
+# A [[mug]]
+===See also===
+*[[beaker people]]
