--- a/wiki/luka.wikitext
+++ b/wiki/luka.wikitext
@@ -1,4 +1,24 @@
-== [[Toki Pona]] == 
+==Bosnian==
+===Noun===
+'''luka''' ''f s''
+#a [[harbor]] ([[harbour]])
+#a [[port]]
+[[Category:Bosnian common nouns]]
+
+----
+
+==Serbian==
+===Noun===
+'''luka''' ''f s''
+#a [[harbor]] ([[harbour]])
+#a [[port]]
+====See also====
+*[[лука]]
+[[Category:Serbian common nouns]]
+
+----
+
+==[[Toki Pona]]== 
 ===Derivation===
 Croatian [[ruka]] "hand, forearm".
 
