--- a/wiki/Zagreb.wikitext
+++ b/wiki/Zagreb.wikitext
@@ -1,13 +1,14 @@
-{{wikipedia}}
 ==English==
+{{wikipedia}}
 ===Proper noun===
 '''Zagreb'''
 
 #The [[capital]] [[city]] of [[Croatia]].
 
 ====Translations====
+*Bosnian: [[Zagreb#Bosnian|Zagreb]] ''m''
 *Bulgarian: [[Загреб]]
-*Croatian: Zagreb
+*Croatian: Zagreb ''m''
 *Danish: Zagreb
 *Dutch: Zagreb
 *[[Esperanto]]: [[Zagrebo]]
@@ -22,8 +23,11 @@
 *Japanese: [[ザグレブ]]
 *Polish: [[Zagrzeb]]
 *Romanian: Zagreb
-*Serbian: [[Загреб]]
+*Serbian:
+*:Cyrillic: [[Загреб]] ''m''
+*:Latin: [[Zagreb#Serbian|Zagreb]] ''m''
 *Slovenian: Zagreb
 *Swedish: Zagreb
 
 [[hu:Zagreb]]
+[[hr:Zagreb]]
