--- a/wiki/regent.wikitext
+++ b/wiki/regent.wikitext
@@ -1,5 +1,5 @@
 ==English==
 ===Noun===
+{{wikipedia}}
 '''regent'''
-# One who rules
-# A monarch or king
+# One who [[rule]]s because the [[monarch]] is too [[young]], [[absent]], or [[disable]]d
