--- a/wiki/Zagreb.wikitext
+++ b/wiki/Zagreb.wikitext
@@ -6,6 +6,7 @@
 #The [[capital]] [[city]] of [[Croatia]].
 
 ====Translations====
+{{top}}
 *Bosnian: [[Zagreb#Bosnian|Zagreb]] ''m''
 *Bulgarian: [[Загреб]]
 *Croatian: Zagreb ''m''
@@ -20,6 +21,7 @@
 *Hungarian: [[Zágráb]]
 *Indonesian: Zagreb
 *Italian: [[Zagabria]]
+{{mid}}
 *Japanese: [[ザグレブ]]
 *Polish: [[Zagrzeb]]
 *Romanian: Zagreb
@@ -28,6 +30,25 @@
 *:Latin: [[Zagreb#Serbian|Zagreb]] ''m''
 *Slovenian: Zagreb
 *Swedish: Zagreb
+{{bottom}}
+
+----
+
+==Bosnian==
+===Proper noun===
+'''Zagreb''' ''m s''
+#the capital city of [[Croatia]]
+[[Category:Bosnian city names]]
+
+----
+
+==Serbian==
+===Proper noun===
+'''Zagreb''' ''m s''
+#the capital city of [[Croatia]]
+====See also====
+*[[Загреб]]
+[[Category:Serbian city names]]
 
 [[hu:Zagreb]]
 [[hr:Zagreb]]
