--- a/wiki/provender.wikitext
+++ b/wiki/provender.wikitext
@@ -1,5 +1,5 @@
 ==English==
 ===Noun===
 '''provender'''
-# Food
+# [[food]], especially for [[livestock]]
 # An edible material that provides sustenance
