expand, +audio <swelter#77130>

--- a/wiki/swelter.wikitext
+++ b/wiki/swelter.wikitext
@@ -1,6 +1,15 @@
 ==English==
-=== Intransitive verb ===
+===Pronunciation===
+*{{audio|en-us-swelter.ogg|Audio (US)}}
+
+===Intransitive verb===
 '''swelter''' '''sweltered''' '''sweltering'''
-# to suffer terribly from intense heat
-# to perspire greatly from heat
+# To suffer terribly from intense [[heat]].
+# To [[perspire]] greatly from heat.
+<!--This example needs its own definition-->
 #* A government that causes [[war prisoner]]s to '''swelter''' in heat is guilty of [[torture]] and [[:w:war crimes|war crimes]].
+
+===Noun===
+'''swelter'''
+#Intense '''heat'''.
+#:''The summer '''swelter''' did not relent until late in September, most years.''
