--- a/wiki/breathable.wikitext
+++ b/wiki/breathable.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
-== Adjective ==
+===Adjective===
 '''breathable'''
-# Air [[suited]] for breathing.
-# Letting air seep through.
+#(''of air'') [[suitable]] for [[breathing]]
+#(''of a fabric'') Letting air [[seep]] through.
