--- a/wiki/Goran.wikitext
+++ b/wiki/Goran.wikitext
@@ -8,13 +8,27 @@
 *[[Dazaga]]
 *[[Toubou]]
 
+===See also===
+*[[w:Goran|Wikipedia article on Goran]]
+
+----
+
+==Croatian==
+====Etymology====
+A [[Slavic]] ([[Serbian]] and [[Croatian]]) male name meaning ''mountain man'' or ''man from the mountain'' that comes from the word ''[[gora]]'', meaning ''mountain''
 ===Proper noun===
 '''Goran'''
 
 #A male [[given name]].
 
+----
+
+==Serbian==
 ====Etymology====
 A [[Slavic]] ([[Serbian]] and [[Croatian]]) male name meaning ''mountain man'' or ''man from the mountain'' that comes from the word ''[[gora]]'', meaning ''mountain''
-
-===See also===
-*[[w:Goran|Wikipedia article on Goran]]
+===Proper noun===
+'''Goran'''
+#A male [[given name]].
+====See also====
+*[[Горан]]
+[[Category:Serbian proper nouns]]
