--- a/wiki/airworthiness.wikitext
+++ b/wiki/airworthiness.wikitext
@@ -1,5 +1,4 @@
 ==English==
-
-
-== Adjective ==
-'''airworthiness''' - The state of being fit for [[flight]].
+===Adjective===
+'''airworthiness'''
+# The state of being [[airworthy]]
