more fmt <on the blink#85686>

--- a/wiki/on_the_blink.wikitext
+++ b/wiki/on_the_blink.wikitext
@@ -1,5 +1,5 @@
 ==English==
 ===Adjectival phrase===
-'''on the blink'''
+'''[[on]] the [[blink]]'''
 #{{idiom}} [[function]]ing [[erratic]]ally, [[malfunction]]ing; not working or not working well.  Usually refers to a mechanical or electronic device.
 #:''My toaster is '''on the blink''', making either charcoal or cold bread.''
