--- a/wiki/anisette.wikitext
+++ b/wiki/anisette.wikitext
@@ -1,4 +1,6 @@
 ==English==
 
-== Noun ==
-'''anisette'''- An [[alcoholic]] [[beverage]] flavored with [[anise]]
+===Noun===
+{{wikipedia}}
+'''anisette'''
+# A [[French]] [[alcoholic]] [[liquer]] flavored with [[anise]]
