--- a/wiki/anisette.wikitext
+++ b/wiki/anisette.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 {{wikipedia}}
 '''anisette'''
-# A [[French]] [[alcoholic]] [[liquer]] flavored with [[anise]]
+# A [[French]] [[alcoholic]] [[liqueur]] flavored with [[anise]]
