+adj def <bumper#71834>

--- a/wiki/bumper.wikitext
+++ b/wiki/bumper.wikitext
@@ -3,3 +3,7 @@
 '''bumper'''
 #{{Cricket}} A [[bouncer]].
 #([[Automobile]]) [[Part]]s at the [[front]] and [[back]] of a [[vehicle]] which are meant to [[absorb]] the [[impact]] of a [[collision]].
+===Adjective===
+'''bumper'''
+# large 
+#: ''We harvested a bumper crop of arugula and parsnips this year.''
