--- a/wiki/antechamber.wikitext
+++ b/wiki/antechamber.wikitext
@@ -1,4 +1,5 @@
 ==English==
 
-== Noun ==
-'''antechamber''' - A small room used as an [[entryway]] or [[reception]] area to a larger room.
+===Noun===
+'''antechamber'''
+# A small room used as an [[entryway]] or [[reception]] area to a larger room.
