--- a/wiki/bohemian.wikitext
+++ b/wiki/bohemian.wikitext
@@ -1,10 +1,12 @@
-:''See also:'' [[Bohemian]]
+:''See also:'' [[bohemian]]
 ==English==
 ===Noun===
-'''bohemian'''
-# an [[unconventional]] or [[nonconformist]] [[artist]] or [[writer]]
+'''Bohemian'''
+# a native or resident of [[Bohemia]]
+# the [[dialect]] of the [[Czech]] [[language]] spoken in Bohemia
+# a [[gypsy]]
 ===Adjective===
-'''bohemian'''
-# unconventional, especially in [[habit]] or [[dress]]
+'''Bohemian'''
+# of, or relating to [[Bohemia]] or its [[language]]
 ===See also===
 *[[bohemium]]
