--- a/wiki/Nahuatl.wikitext
+++ b/wiki/Nahuatl.wikitext
@@ -1,13 +1,14 @@
 ==English==
 ===Noun===
-#'''Nahuatl'''; language spoken by an indigenous people of [[Mexico]].
+#'''Nahuatl'''; an Aztecan language spoken by an indigenous people of [[Mexico]].
 
 ===Translation===
-#:*{{chr}}: [[ᎾᎱᎠᏢ]]
-#:*{{fr}}: nahuatl ''m''
-#:*{{nl}}: Nahuatl
-#:*{{nah}}: [[náhuatl]], [[nawatl]]
-#:*{{es}}: [[náhuatl]] ''m''
+*{{chr}}: [[ᎾᎱᎠᏢ]]
+*Dutch: Nahuatl
+*French: nahuatl ''m''
+*{{nah}}: [[náhuatl]], [[nawatl]]
+*Spanish: [[náhuatl]] ''m''
+*Russian: [[науатль]] (nauatl’) ''m''
 
 
 [[Category:Nahuatl language]]
