[[nippon]] moved to [[Nippon]] <nippon#188208>

--- a/wiki/Nippon.wikitext
+++ b/wiki/Nippon.wikitext
@@ -1,12 +1,1 @@
-==English==
-===Proper noun===
-'''Nippon'''
-
-#Romanized version of [[日本]], the native Japanese name for [[Japan]]. Another way to pronounce it is [[Nihon]].
-
-===Related terms===
-*[[Nipponese]]
-*[[Nipponism]]
-*[[Nipponize]]
-
-[[de:nippon]]
+#redirect [[Nippon]]
