--- a/wiki/Achaean.wikitext
+++ b/wiki/Achaean.wikitext
@@ -1,7 +1,7 @@
 ===Etymology===
 Latin ''[[Achaeus]]'' or ''[[Achaius]]'' from Greek
 ===Variants===
-[[achaian]], [[achean]]
+[[Achaian]], [[Achean]]
 ===Proper noun===
 # An inhabitant or a resident of [[Achaea]]
 ===Adjective===
