Fix link <hypnosis#185310>

--- a/wiki/hypnosis.wikitext
+++ b/wiki/hypnosis.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 {{wikipedia}}
 '''hypnosis'''
-# a [[trance]]like state, [[artificially]] [[induce]]d, in which a person has a [[heighten]]ed [[suggestibility]], and in which [[suppressed]] [[memories]] may be [[experienced]]
+# a [[trance]]like state, [[artificial]]ly [[induce]]d, in which a person has a [[heighten]]ed [[suggestible|suggestibility]], and in which [[suppress]]ed [[memory|memories]] may be [[experience]]d
 # the art or skill of [[hypnotism]]
 ===Translations===
 *Chinese : 催眠术
