--- a/wiki/Baghdad.wikitext
+++ b/wiki/Baghdad.wikitext
@@ -5,12 +5,16 @@
 
 ====Translations====
 *Arabic: [[بغداد]]
+*Bosnian: [[Bagdad]] ''m''
 *Finnish: [[Bagdad]]
 *French: [[Bagdad]]
 *Italian: [[Bagdad]] ''f'', [[Baghdad]] ''f''
 *[[Kurdish]]: [[Bexda]] ''f''
 *Portuguese: [[Bagdá]]
 *Russian: [[Багдад]] ''m''
+*Serbian:
+*:Cyrillic: [[Багдад]] ''m''
+*:Latin: [[Bagdad]] ''m''
 *Turkish: [[Bağdat]]
 
 [[pl:Baghdad]]
