[[hu]] moved to [[Hu]] <hu#188219>

--- a/wiki/Hu.wikitext
+++ b/wiki/Hu.wikitext
@@ -1,8 +1,1 @@
-==English==
-===Proper noun===
-'''Hu'''
-#A name for [[God]] in the [[Eckankar]] [[religion]].
-#A chant consisting of many people singing "Hu" together.
-
-[[gl:Hu]]
-[[ru:Hu]]
+#redirect [[Hu]]
