--- a/wiki/Leon.wikitext
+++ b/wiki/Leon.wikitext
@@ -1,14 +1,1 @@
-==English==
-===Proper noun===
-'''Leon'''
-
-# a male given name. Usually a short form of [[Leonard]]. cf [[Leo]].
-
-----
-
-== [[Interlingua]] ==
-== [[Volapük]] ==
-== [[noun]] ==
-# a [[lion]]
-
-[[pl:Leon]]
+#redirect [[Leon]]
