--- a/wiki/Leon.wikitext
+++ b/wiki/Leon.wikitext
@@ -1,1 +1,7 @@
-#redirect [[Leon]]
+==English==
+===See also===
+*[[leon]]
+===Proper noun===
+'''Leon'''
+
+# a male given name. Usually a short form of [[Leonard]]. cf [[Leo]].
