--- a/wiki/Leon.wikitext
+++ b/wiki/Leon.wikitext
@@ -1,7 +1,11 @@
 ==English==
-===See also===
-*[[leon]]
-===Proper noun===
-'''Leon'''
+See [[Leon]]
+----
 
-# a male given name. Usually a short form of [[Leonard]]. cf [[Leo]].
+== [[Interlingua]] ==
+=== Noun===
+# a [[lion]]
+
+== [[Volapük]] ==
+=== Noun===
+# a [[lion]]
