--- a/wiki/Canberra.wikitext
+++ b/wiki/Canberra.wikitext
@@ -1,4 +1,6 @@
+==English==
 ===Proper noun===
+'''Canberra'''
 #National capital of [[Australia]], located in the [[Australian Capital Territory]].
 #(Colloquial) The Australian government.
 #:''A new tax policy was announced by Canberra today''.
