--- a/wiki/Azores.wikitext
+++ b/wiki/Azores.wikitext
@@ -1,30 +1,1 @@
-==English==
-===Proper noun===
-'''the Azores''' (''plural'')
-
-#An island group in the [[Atlantic Ocean]] belonging to [[Portugal]].
-
-====Translations====
-*French: les [[Açores]] ''f pl''
-*German: die [[Azoren]] '''gender?''' ''pl''
-*[[Interlingua]]: le Azores ''pl''
-*Italian: le [[Azzorre]] ''f pl''
-*Portuguese: os [[Açores]] ''m pl''
-*Spanish: las Azores ''f pl''
-
-===See also===
-*[[en:Azores|Wikipedia article on the Azores]]
-
-----
-==Interlingua==
-===Proper noun===
-'''le Azores''' ''pl''
-
-#the Azores
-
-----
-==Spanish==
-===Proper noun===
-'''las Azores''' ''f pl''
-
-#the Azores
+#redirect [[Azores]]
