--- a/wiki/chine.wikitext
+++ b/wiki/chine.wikitext
@@ -1,17 +1,9 @@
 ==English==
-See [[chine]]
 
+===Noun===
+'''chine'''
+# The top of a [[ridge]].
+
+----
 ==French==
-===Proper noun===
-'''Chine''' ''f''
-
-# [[China]]
-
-===Related terms===
-*[[chinois]]
-
-[[de:Chine]]
-[[et:Chine]]
-[[fr:Chine]]
-[[hi:Chine]]
-[[ja:Chine]]
+See [[Chine]]
