--- a/wiki/himnusz.wikitext
+++ b/wiki/himnusz.wikitext
@@ -1,1 +1,5 @@
-#redirect [[himnusz]]
+==Hungarian==
+See also [[himnusz]]
+===Proper noun===
+'''Himnusz''' (also '''Magyar Himnusz''')
+# [[national]] [[anthem]] of [[Hungary]]
