--- a/wiki/himnusz.wikitext
+++ b/wiki/himnusz.wikitext
@@ -1,5 +1,13 @@
 ==Hungarian==
-See also [[himnusz]]
-===Proper noun===
-'''Himnusz''' (also '''Magyar Himnusz''')
-# [[national]] [[anthem]] of [[Hungary]]
+{{wikipedia}}
+See also [[Himnusz]]
+
+===Noun===
+'''himnusz'''
+# [[anthem]]
+
+===See also===
+*[[Szózat]]
+
+[[Category:Hungarian titles]]
+[[Category:Hungarian nouns]]
