--- a/wiki/Blue_Riband.wikitext
+++ b/wiki/Blue_Riband.wikitext
@@ -2,3 +2,4 @@
 ===Proper Noun===
 {{wikipedia}}
 #{{nautical}} a [[trophy]] for the [[fastest]] [[sea]] [[crossing]] of the [[Atlantic]] by a [[liner]]
+#(UK) A brand of chocolate biscuit.
