--- a/wiki/Johnny.wikitext
+++ b/wiki/Johnny.wikitext
@@ -1,1 +1,7 @@
-#redirect [[Johnny]]
+==English==
+===Proper Noun===
+'''Johnny''' (''plural'' '''Johnnies''')
+#[[Diminutive]] of [[John]].
+
+===See also===
+*[[johnny]]
