--- a/wiki/Johnny.wikitext
+++ b/wiki/Johnny.wikitext
@@ -1,7 +1,8 @@
 ==English==
-===Proper Noun===
-'''Johnny''' (''plural'' '''Johnnies''')
-#[[Diminutive]] of [[John]].
+See also [[Johnny]]
+===Noun===
+'''johnny'''
+#(slang) [[condom]]
 
-===See also===
-*[[johnny]]
+====Related Terms====
+*[[rubber johnny]]
