--- a/wiki/Nahuatl.wikitext
+++ b/wiki/Nahuatl.wikitext
@@ -1,15 +1,30 @@
 ==English==
 ===Noun===
-#'''Nahuatl'''; an Aztecan language spoken by an indigenous people of [[Mexico]].
+#'''Nahuatl'''; the [[polysynthetic]] Aztecan language spoken by an indigenous people of [[Mexico]].
 
 ===Translation===
+{{top}}
+*[[Catalan]]: [[Nàhuatl]]
 *{{chr}}: [[ᎾᎱᎠᏢ]]
+*Danish: Nahuatl
 *Dutch: Nahuatl
+*[[Esperanto]]: [[Naŭatla lingvo]]
+*Finnish: nahuatl
 *French: nahuatl ''m''
+*German: Nahuatl
+*Italian: Nahuatl
+{{mid}}
+*Japanese: [[ナワトル語]] (nawatoru-go)
 *{{nah}}: [[náhuatl]], [[nawatl]]
-*Spanish: [[náhuatl]] ''m''
+*Polish: [[język nahuatl]]
+*Portuguese: [[língua nahuatl]]
 *Russian: [[науатль]] (nauatl’) ''m''
+*Spanish: [[náhuatl]] ''m''
+*Swedish: Nahuatl
+{{bottom}}
 
+===See also===
+*[[w:Nahuatl language|Wikipedia article on Nahuatl]]
 
 [[Category:Nahuatl language]]
 [[fr:nahuatl]]
