--- a/wiki/dixi.wikitext
+++ b/wiki/dixi.wikitext
@@ -1,1 +1,6 @@
-Latin for "I have spoken. (I will say no more on the matter, and no one else may speak further)"
+==Latin==
+===Verb form===
+'''dixi'''
+# 1st person singular, perfect tense of [[dico]] - I have spoken
+===Related terms===
+*[[dixit]]
