fmt + wikify <amphimacer#188138>

--- a/wiki/amphimacer.wikitext
+++ b/wiki/amphimacer.wikitext
@@ -1,2 +1,4 @@
-
-An '''Amphimacer''' is a [[Foot_(prosody)|metrical foot]] consisting of an unaccented syllable between two accented syllables.
+==English==
+===Noun===
+'''amphimacer'''
+# A [[metrical foot]] consisting of an unaccented [[syllable]] between two [[accented]] syllables.
