wikify and correct definition <90Y-DOTA-biotin#188129>

--- a/wiki/90Y-DOTA-biotin.wikitext
+++ b/wiki/90Y-DOTA-biotin.wikitext
@@ -1,2 +1,4 @@
-
-'''90Y-DOTA-biotin''' is a [[radioactive]] substance ([[yttrium|yttrium-90]]) joined by a large chemical link (DOTA) to [[biotin]], a [[vitamin]].
+==English==
+===Noun phrase===
+'''90Y-DOTA-biotin'''
+# the [[vitamin]] [[biotin]] [[labelled]] with [[radioactive]] ([[yttrium|yttrium-90]]); it is used in the treatment of [[cancer]] where it seeks out [[tumor]] [[cell]]s that have been [[target]]ed by an [[antibody]] linked to [[strepavidin]] and [[kill]] them
