--- a/wiki/God_complex.wikitext
+++ b/wiki/God_complex.wikitext
@@ -10,7 +10,7 @@ Psychiatry has offered alternative terminology, such as 'compensatory narcissist
 
 In the book ''All Mighty: A Study of the God Complex in Western Man'', by [[Horst Richter]] (ISBN 0897930282), [[authoritarian]] [[compulsion|compulsions]] are related to the [[rebel|rebellious]] stage of childhood development.  Richter examines how the arrested development of such compulsions leads to denial of suffering, self-doubt, and death, and an expectation of [[servile|servility]] for women and minorities.
 
-==External links==
+.==External links==.
 
 * [http://www.fragilecologies.com/aug29_98.html FragileEcologies] - 'Chinese Floods: A Natural or a Man-Made Disaster?' Michael Glantz (August 29, 1998)
 * [http://www.mclemee.com/id97.html McLemee.com] - 'The Shrink with a God Complex' Ronald Hayman ''Newsday'', (April 22, 2001) 
