fmt + wikify <attercop#188148>

--- a/wiki/attercop.wikitext
+++ b/wiki/attercop.wikitext
@@ -1,3 +1,5 @@
-
-Attercop is an archaic term for poisonous spiders in J.RR Tolkein's The Hobbit.
-Attercop can also mean peevish or ill-natured person
+==English==
+===Noun===
+'''attercop'''
+# An archaic term for poisonous spiders in J.RR Tolkein's [[The Hobbit]]
+# A [[peevish]] or [[ill-natured]] person
