remove copyvio <affricative#188132>

--- a/wiki/affricative.wikitext
+++ b/wiki/affricative.wikitext
@@ -1,7 +1,7 @@
-
-A composite speech sound consisting of a stop and a [[fricative]] articulated at the same point.
-
-''Examples:''
-
-* 'ch' in `chair'
-* 'j' in `joy'
+==English==
+===Noun===
+'''affricative'''
+# an [[affricate]]
+===Adjective===
+'''affricative'''
+# of, or relating to an affricate
