wikify <Alcaic verse#188134>

--- a/wiki/Alcaic_verse.wikitext
+++ b/wiki/Alcaic_verse.wikitext
@@ -1,2 +1,4 @@
-
-A Greek lyrical meter, said to be invented by [[Alcaeus]], a lyric poet from about 600 BC. It is distinguished by a complicated variation of a dominant [[Iamb|iambic]] pattern.
+==English==
+===Noun===
+'''Alcaiv verse'''
+# A [[Greek]] [[meter]], supposedly invented by [[Alcaeus]]; consists of combinations of [[spondee]], [[iamb]]s and [[dactyl]]s
