--- a/wiki/attrition.wikitext
+++ b/wiki/attrition.wikitext
@@ -1,3 +1,9 @@
-'''Attrition''' has dual meanings depending on the context of its usage.  Generally it means wearing or grinding down by [[friction]].  From a [[military]] standpoint it means a gradual, natural reduction in membership or personnel, as through retirement, resignation, or [[death]].  '''Attrition damage''' can be sped up by one party against another with a [[strategy]] of constant [[harassment]], abuse, or attack or though the use of a [[blockade]].
+==English==
+===Noun===
+'''attrition'''
+# wearing or grinding down by [[friction]]
+# (military) A gradual, natural reduction in membership or personnel, as through retirement, resignation, or [[death]]
+# A policy of decruitment by not recruiting following voluntary resignation or retirement.
 
-'''Attrition''' in [[Human Resource Management|HRM]] terms is also a [[Decruitment]] option. It's the action of not filling openings created by voluntary resignation or normal retirements.
+==See also==
+* [[attrition damage]]
