wikify <alpha female#188136>

--- a/wiki/alpha_female.wikitext
+++ b/wiki/alpha_female.wikitext
@@ -1,5 +1,7 @@
-'''Alpha Female''', borrowed from the animal kingdom, has gained usage as a term to describe dominant females. The American Heritage Dictionary defines Alpha Female as “being the highest ranked or most dominant individual of one’s sex, used of social animals.” The alpha female of a wolf pack is the leader of the females; the alpha male is leader of the males and the entire pack.  
-
-When applied to human females the term is misleading and not altogether representative of the millions of self-assured and strong women in our society today. A better term to describe a powerful female is "Star Woman," meaning a woman who is a leader and visionary, whose energy is active and self-directed.
-
-A Star Woman is more like the alpha male in a wolf pack, leader of both males and females. The term Star Woman was originally coined in a book titled Venus On Top: Women Who Are Born To Lead And The Men Who Love Them." A full exploration of the Star Woman personality type can be found in Chapter 3.
+==English==
+===Etymology===
+by extension, from [[alpha male]]
+===Noun===
+'''alpha female'''
+#{{biology}} the [[dominant]] [[female]] [[animal]] in a [[pack]]
+#(''by extension'') a [[self-assured]] and [[strong]] [[woman]]; an [[alphette]]
