--- a/wiki/amphimacer.wikitext
+++ b/wiki/amphimacer.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
 '''amphimacer'''
-# A [[metrical foot]] consisting of an unaccented [[syllable]] between two [[accented]] syllables.
+# A [[metrical foot]] consisting of an [[unaccented]] [[syllable]] between two [[accented]] syllables; a [[cretic]]
