--- a/wiki/%E0%A4%85%E0%A4%A8%E0%A4%A8%E0%A5%8D%E0%A4%AF.wikitext
+++ b/wiki/%E0%A4%85%E0%A4%A8%E0%A4%A8%E0%A5%8D%E0%A4%AF.wikitext
@@ -1,2 +1,4 @@
-
-Ananya in Sanskrit means, 'like no other.", matchless, unique, without equal.
+==Sanskrit==
+===Adjective===
+'''ananya'''
+# [[matchless]], [[unique]], without [[equal]]
