--- a/wiki/Andrade.wikitext
+++ b/wiki/Andrade.wikitext
@@ -1,3 +1,4 @@
-
-One of the most powerful families of the north-west of [[Spain]] during the [[Middle Ages]]
-Family name also found in South American countries.
+==Spanish==
+===Proper noun===
+'''Andrade'''
+# a [[surname]]
