--- a/wiki/antiphagocytic.wikitext
+++ b/wiki/antiphagocytic.wikitext
@@ -1,1 +1,4 @@
-Impeding or preventing the action of phagocytes.
+==English==
+===Adjective===
+'''antiphagocytic'''
+# [[impeding]] or [[preventing]] the action of [[phagocyte]]s
