--- a/wiki/automatic_leveling_system.wikitext
+++ b/wiki/automatic_leveling_system.wikitext
@@ -1,2 +1,4 @@
-
-Suspension system that automatically adjusts front and rear ride heights to compensate for changes in axle load.
+==English==
+===Noun phrase===
+'''Automatic Leveling System'''
+# A [[suspension]] system that [[automatically]] adjusts front and rear ride heights to compensate for changes in [[axle]] load.
