--- a/wiki/attrition.wikitext
+++ b/wiki/attrition.wikitext
@@ -5,5 +5,5 @@
 # (military) A gradual, natural reduction in membership or personnel, as through retirement, resignation, or [[death]]
 # A policy of decruitment by not recruiting following voluntary resignation or retirement.
 
-==See also==
+===See also===
 * [[attrition damage]]
