/* Noun phrase */ <automatic leveling system#188153>

--- a/wiki/automatic_leveling_system.wikitext
+++ b/wiki/automatic_leveling_system.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun phrase===
-'''Automatic Leveling System'''
+'''[[automatic]] [[leveling]] [[system]]'''
 # A [[suspension]] system that [[automatically]] adjusts front and rear ride heights to compensate for changes in [[axle]] load.
