fmt + wikify <automatic distance control#188155>

--- a/wiki/automatic_distance_control.wikitext
+++ b/wiki/automatic_distance_control.wikitext
@@ -1,2 +1,4 @@
-
-Automatic Distance Control (ADC) - technologies that utilize radar, infared and image processiong to allow for a decentralized recording of the environment around the vehicle. Includes [[Adaptive cruise control]] (ACC).
+==English==
+===Noun phrase===
+'''automatic distance control''' (abbreviated as '''ADC''')
+# Technologies that utilize [[radar]], [[infared]] and [[image processiong]] to allow for a decentralized recording of the environment around the vehicle. Includes [[Adaptive cruise control]] (ACC).
