--- a/wiki/avulsion.wikitext
+++ b/wiki/avulsion.wikitext
@@ -1,2 +1,5 @@
-
-'''Avulsion''' is the loss or seperation of a [[body]] part.
+==English==
+===Noun===
+'''avulsion'''
+# The loss or seperation of a [[body]] part
+# Movement of [[soil]] during a flood
