--- a/wiki/avulsion.wikitext
+++ b/wiki/avulsion.wikitext
@@ -1,5 +1,5 @@
 ==English==
 ===Noun===
 '''avulsion'''
-# The loss or seperation of a [[body]] part
+# The [[loss]] or [[separation]] of a [[body]] part, either by [[surgery]] or due to [[trauma]]
 # Movement of [[soil]] during a flood
