/* Noun */ <Alcaic verse#188134>

--- a/wiki/Alcaic_verse.wikitext
+++ b/wiki/Alcaic_verse.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
-'''Alcaiv verse'''
+'''Alcaic verse'''
 # A [[Greek]] [[meter]], supposedly invented by [[Alcaeus]]; consists of combinations of [[spondee]], [[iamb]]s and [[dactyl]]s
