--- a/wiki/pumpkin.wikitext
+++ b/wiki/pumpkin.wikitext
@@ -17,6 +17,7 @@
 *[[Albanian]]: [[Kungull]]
 *[[Bulgarian]]: [[тиква]] (tikva) ''f'' (1,2)
 *[[Dutch]]: [[pompoen]] ''f''
+*[[Esperanto]]: kukurbo
 *[[Finnish]]: [[kurpitsa]]
 *[[French]]: [[citrouille]] ''f'' (1) (2), [[potiron]] ''m'' (1) (2), [[courge]] ''f''
 *[[Frisian]]: [[klabats]], [[pompoen]]
