--- a/wiki/idiom.wikitext
+++ b/wiki/idiom.wikitext
@@ -13,21 +13,21 @@
 # The specific property of any language
 
 ==== Translations ====
-*Chinese:[[成语]]，[[习惯用语]]
-*Danish: idiom
-*Dutch: [[idioom]] ''n''
+*[[Chinese]]:[[成语]]，[[习惯用语]]
+*[[Danish]]: idiom
+*[[Dutch]]: [[idioom]] ''n''
 *[[Esperanto]]: [[idiotismo]]
-*French: [[locution]] ''f'', [[expression]] ''f''
-*German: Idiom ''n'', [[Redewendung]] ''f''
+*[[French]]: [[locution]] ''f'', [[expression]] ''f''
+*[[German]]: Idiom ''n'', [[Redewendung]] ''f''
 *[[Interlingua]]: [[idiotismo]], [[expression]]; [[idioma]]
-*Korean: [[숙어]] [[熟語]] (suk-eo)
-*Polish: idiom
-*Portuguese: [[idiotismo]], [[idiomatismo]], [[expressão]]; [[idioma]]
+*[[Korean]]: [[숙어]] [[熟語]] (suk-eo)
+*[[Polish]]: idiom
+*[[Portuguese]]: [[idiotismo]], [[idiomatismo]], [[expressão]]; [[idioma]]
 *[[Romanica]]: [[idiotismo]] ''m'', [[expression]] ''f''; [[idioma]] ''f''
 *[[Russian]]: [[идиома]] ''f'', [[идиоматический оборот]] ''m'', [[идиоматическое выражение]] ''n''
-*Spanish: [[frase hecha]] <!-- is frase hecha a frase hecha? :) -->
-*Swedish: idiom
-*Turkish: [[deyim]]
+*[[Spanish]]: [[frase hecha]] <!-- is frase hecha a frase hecha? :) -->
+*[[Swedish]]: idiom
+*[[Turkish]]: [[deyim]]
 
 === Related terms ===
 *[[idiomatic]]
