--- a/wiki/phrase.wikitext
+++ b/wiki/phrase.wikitext
@@ -41,6 +41,8 @@ Latin, from Greek [[φράζειν]] (phrazein)
 {|
 <!--Put translations for languages from A to I here-->
 *Catalan: [[sintagma]] ''m''
+*Esperanto: lokucio
+*Chinese: [[短语]]
 *French: [[locution#French|locution]] ''f''
 *German: [[Redewendung]] ''f''
 |}
