/* English */ <deus ex machina#49440>

--- a/wiki/deus_ex_machina.wikitext
+++ b/wiki/deus_ex_machina.wikitext
@@ -1,3 +1,4 @@
+{{wikipedia}}
 ==English==
 
 ===Latin Noun Phrase===
@@ -7,6 +8,3 @@
 #(''Literally'') A god from a machine.
 #(''Television, capitalized'') The name of the ship that Joel Hodgson uses to escape from the Satellite of Love on the television program ''Mystery Science Theater 3000''.
 #(''Motion pictures, capitalized'') The ultimate power in the machine world in ''The Matrix Revolutions'', the third motion picture of ''The Matrix'' series.
-
-===Further Reading===
-*[http://en.wikipedia.org/wiki/Deus_ex_machina Wikipedia article on 'Deus ex machina']
